  Reported by Heino Tiedemann and Rob MacGregor. (MA)
* Remove bogus Netscape IMAP4rev1 Service >= 3.6 warning about BODY[TEXT]
  that we are not using. Patch by Sunil Shetye. (MA)
* Plug potential memory and socket leak when polling multiple folders or when
  the upstream sends bogus message sizes.  Patch by Sunil Shetye. (MA)

fetchmail 6.3.0 (released 2005-11-30):

# SECURITY FIXES IN THIS RELEASE
* CVE-2005-2335: The POP3 UIDL code doesn't sufficiently validate/truncate the
  input length, so a (malicious or compromised) server that sends UIDs longer
  than 128 bytes can corrupt fetchmail's stack and crash fetchmail.
  This vulnerability is remotely exploitable to inject code run in a
  root shell. Edward J. Shornock, Ludwig Nussel. fetchmail-SA-2005-01.txt
* CVE-2005-3088: fetchmailconf now changes the output file to mode 0600 BEFORE
  writing to it, so there is no window where passwords could be read by the
  world. Matthias Andree. fetchmail-SA-2005-02.txt

# MAJOR INCOMPATIBLE CHANGES
* Remove support for --netsec/-T options, the required inet6_apps library is no
  longer available.
  http://www.inner.net/pub/ipv6/ states, as of 2005-07-03: "/pub/ipv6
  Our IPv6 software is now long defunct. Please find a more modern source."
  I haven't been able to find a more modern source.  Matthias Andree
* Operating systems that do not conform to the Single Unix Specification v2
  (1997) or v3 (2001, aka IEEE Std 1003.1-2001) are no longer supported. They
  may continue to work and non-intrusive patches to support them may be
  accepted.  Matthias Andree
* The default for --smtphost is now always "localhost" regardless of
  authentication types and protocols, so as to simplify configurations for
  workstations where the SMTP daemon only listens on the loopback interface.
  Sunil Shetye & Matthias Andree

# OBSOLETION WARNINGS
* The MX and host alias lookups that fetchmail performs in multidrop mode are